add needed entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.h2.console.enabled=true
+spring.h2.console.path=/console/
+spring.datasource.url=jdbc:h2:mem:simple-crm
 
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.hibernate.ddl-auto=update
