--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:h2:mem:simple-crm
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
