Add initial data to database and eliminate JSON infinite recursion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
+
+# H2 config
 spring.h2.console.enabled=true
 spring.h2.console.path=/console/
-spring.datasource.url=jdbc:h2:mem:simple-crm
+spring.datasource.url=jdbc:h2:mem:simple-crm;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
 
+# Hibernate/JPA config
 logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
 
+# Springfox config
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
