--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/console/
-spring.datasource.url=jdbc:h2:mem:simple-crm;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
-
-# Hibernate
-logging.level.org.hibernate.SQL=DEBUG
+# Database
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:mysql://localhost:3306/simple-crm
+spring.datasource.username=user
+spring.datasource.password=password123!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.hibernate.SQL=DEBUG
 
 # Springfox
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
@@ -16,3 +14,7 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 application.jwt.secretKey=Secure12345Secure12345Secure12345Secure12345Secure12345
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationDays=10
+
+# Logging
+logging.level.pl.mateuszkolodziejczyk=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
