--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,11 @@
 
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/console/
-spring.datasource.url=jdbc:h2:mem:simple-crm;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
-
-# Hibernate
+# Database
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:mysql://localhost:3306/simple-crm
+spring.datasource.username=user
+spring.datasource.password=password123!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.hibernate.SQL=DEBUG
 
 # Springfox
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
