--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 
 # Database
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/simple-crm
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://mysqldb:3306/simple-crm
 spring.datasource.username=user
 spring.datasource.password=password123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.hibernate.SQL=DEBUG
+
 
 # Springfox
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
